@@ -28,7 +28,6 @@ import org.codehaus.janino.*;
 import org.codehaus.janino.Scanner;
 
 import java.io.StringReader;
-import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 import static com.graphhopper.json.Statement.Keyword.IF;
@@ -38,8 +37,9 @@ import static com.graphhopper.json.Statement.Keyword.IF;
  */
 public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exception> {
 
-    private static final Set<String> allowedMethodParents = new HashSet<>(Arrays.asList("Math"));
-    private static final Set<String> allowedMethods = new HashSet<>(Arrays.asList("sqrt"));
+    private static final String INFINITY = Double.toString(Double.POSITIVE_INFINITY);
+    private static final Set<String> allowedMethodParents = Set.of("Math");
+    private static final Set<String> allowedMethods = Set.of("sqrt");
     private final ParseResult result;
     private final NameValidator variableValidator;
     private String invalidMessage;
@@ -61,8 +61,7 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
 
     @Override
     public Boolean visitRvalue(Java.Rvalue rv) throws Exception {
-        if (rv instanceof Java.AmbiguousName) {
-            Java.AmbiguousName n = (Java.AmbiguousName) rv;
+        if (rv instanceof Java.AmbiguousName n) {
             if (n.identifiers.length == 1) {
                 String arg = n.identifiers[0];
                 // e.g. like road_class
@@ -75,14 +74,12 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
         }
         if (rv instanceof Java.Literal) {
             return true;
-        } else if (rv instanceof Java.UnaryOperation) {
-            Java.UnaryOperation uop = (Java.UnaryOperation) rv;
+        } else if (rv instanceof Java.UnaryOperation uop) {
             result.operators.add(uop.operator);
             if (uop.operator.equals("-"))
                 return uop.operand.accept(this);
             return false;
-        } else if (rv instanceof Java.MethodInvocation) {
-            Java.MethodInvocation mi = (Java.MethodInvocation) rv;
+        } else if (rv instanceof Java.MethodInvocation mi) {
             if (allowedMethods.contains(mi.methodName)) {
                 // skip methods like this.in()
                 if (mi.target != null) {
@@ -108,8 +105,7 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
             return false;
         } else if (rv instanceof Java.ParenthesizedExpression) {
             return ((Java.ParenthesizedExpression) rv).value.accept(this);
-        } else if (rv instanceof Java.BinaryOperation) {
-            Java.BinaryOperation binOp = (Java.BinaryOperation) rv;
+        } else if (rv instanceof Java.BinaryOperation binOp) {
             String op = binOp.operator;
             result.operators.add(op);
             if (op.equals("*") || op.equals("+") || binOp.operator.equals("-")) {
@@ -185,7 +181,7 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
     }
 
     static Set<String> findVariables(String valueExpression, EncodedValueLookup lookup) {
-        ParseResult result = parse(valueExpression, lookup::hasEncodedValue);
+        ParseResult result = parse(valueExpression, key -> lookup.hasEncodedValue(key) || key.contains(INFINITY));
         if (!result.ok)
             throw new IllegalArgumentException(result.invalidMessage);
         if (result.guessedVariables.size() > 1)
@@ -201,25 +197,23 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
         } catch (NumberFormatException ex) {
             try {
                 if (result.guessedVariables.isEmpty()) { // without encoded values
-                    ExpressionEvaluator ee = new ExpressionEvaluator();
-                    ee.cook(valueExpression);
-                    value = ((Number) ee.evaluate()).doubleValue();
+                    NoArgEvaluator ee = new ExpressionEvaluator().createFastEvaluator(valueExpression, NoArgEvaluator.class);
+                    value = ee.evaluate();
                 } else if (lookup.hasEncodedValue(valueExpression)) { // speed up for common case that complete right-hand side is the encoded value
                     EncodedValue enc = lookup.getEncodedValue(valueExpression, EncodedValue.class);
                     value = Math.min(getMin(enc), getMax(enc));
                 } else {
                     // single encoded value
-                    ExpressionEvaluator ee = new ExpressionEvaluator();
                     String var = result.guessedVariables.iterator().next();
-                    ee.setParameters(new String[]{var}, new Class[]{double.class});
-                    ee.cook(valueExpression);
-                    double max = getMax(lookup.getEncodedValue(var, EncodedValue.class));
-                    Number val1 = (Number) ee.evaluate(max);
-                    double min = getMin(lookup.getEncodedValue(var, EncodedValue.class));
-                    Number val2 = (Number) ee.evaluate(min);
-                    value = Math.min(val1.doubleValue(), val2.doubleValue());
+                    SingleArgEvaluator ee = new ExpressionEvaluator().createFastEvaluator(valueExpression, SingleArgEvaluator.class, var);
+                    EncodedValue enc = lookup.getEncodedValue(var, EncodedValue.class);
+                    double max = getMax(enc);
+                    double val1 = ee.evaluate(max);
+                    double min = getMin(enc);
+                    double val2 = ee.evaluate(min);
+                    value = Math.min(val1, val2);
                 }
-            } catch (CompileException | InvocationTargetException ex2) {
+            } catch (CompileException ex2) {
                 throw new IllegalArgumentException(ex2);
             }
         }
@@ -248,9 +242,8 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
 
         try {
             if (result.guessedVariables.isEmpty()) { // without encoded values
-                ExpressionEvaluator ee = new ExpressionEvaluator();
-                ee.cook(valueExpression);
-                double val = ((Number) ee.evaluate()).doubleValue();
+                NoArgEvaluator ee = new ExpressionEvaluator().createFastEvaluator(valueExpression, NoArgEvaluator.class);
+                double val = ee.evaluate();
                 return new MinMax(val, val);
             }
 
@@ -260,16 +253,15 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
                 return new MinMax(min, max);
             }
 
-            ExpressionEvaluator ee = new ExpressionEvaluator();
             String var = result.guessedVariables.iterator().next();
-            ee.setParameters(new String[]{var}, new Class[]{double.class});
-            ee.cook(valueExpression);
-            double max = getMax(lookup.getEncodedValue(var, EncodedValue.class));
-            Number val1 = (Number) ee.evaluate(max);
-            double min = getMin(lookup.getEncodedValue(var, EncodedValue.class));
-            Number val2 = (Number) ee.evaluate(min);
-            return new MinMax(Math.min(val1.doubleValue(), val2.doubleValue()), Math.max(val1.doubleValue(), val2.doubleValue()));
-        } catch (CompileException | InvocationTargetException ex) {
+            SingleArgEvaluator ee = new ExpressionEvaluator().createFastEvaluator(valueExpression, SingleArgEvaluator.class, var);
+            EncodedValue enc = lookup.getEncodedValue(var, EncodedValue.class);
+            double max = getMax(enc);
+            double val1 = ee.evaluate(max);
+            double min = getMin(enc);
+            double val2 = ee.evaluate(min);
+            return new MinMax(Math.min(val1, val2), Math.max(val1, val2));
+        } catch (CompileException ex) {
             throw new IllegalArgumentException(ex);
         }
     }
@@ -284,5 +276,13 @@ public class ValueExpressionVisitor implements Visitor.AtomVisitor<Boolean, Exce
         if (enc instanceof DecimalEncodedValue) return ((DecimalEncodedValue) enc).getMaxOrMaxStorableDecimal();
         else if (enc instanceof IntEncodedValue) return ((IntEncodedValue) enc).getMaxOrMaxStorableInt();
         throw new IllegalArgumentException("Cannot use non-number data '" + enc.getName() + "' in value expression");
+    }
+
+    protected interface NoArgEvaluator {
+        double evaluate();
+    }
+
+    protected interface SingleArgEvaluator {
+        double evaluate(double arg);
     }
 }
